templater/tests/snapshots/error__debug_render_report__unclosed_if_block.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x unclosed block
   ,----
 1 | {% if true %}hi
   : ^^^^^^^^^^^^^
   `----
