templater/tests/snapshots/error__debug_render_report__unclosed_interpolation.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x unclosed delimiter
   ,----
 1 | {{ x
   : ^^
   `----
