templater/tests/snapshots/error__debug_render_report__unclosed_statement.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x unclosed delimiter
   ,----
 1 | {% if x
   : ^^
   `----
