templater/tests/snapshots/error__debug_render_report__unclosed_string.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x unclosed string literal
   ,----
 1 | {{ "unterminated }}
   :    |
   :    `-- close the string with `"`
   `----
