templater/tests/snapshots/error__debug_render_report__undefined_function.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x undefined function `nope`
   ,----
 1 | {{ nope() }}
   :    ^^^^
   `----
