templater/tests/snapshots/error__debug_render_report__undefined_variable.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x undefined variable `missing`
   ,----
 1 | {{ missing }}
   :    ^^^|^^^
   :       `-- define this variable or fix the name
   `----
