templater/tests/snapshots/error__debug_render_report__unexpected_token.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x unexpected token
   ,----
 1 | {{ @ }}
   :    |
   :    `-- remove or correct this token
   `----
