templater/tests/snapshots/error__debug_render_report__unexpected_token_after_expr.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x unexpected token after expression
   ,----
 1 | {{ a b }}
   :      |
   :      `-- remove or correct this token
   `----
