templater/tests/snapshots/error__debug_render_report__unexpected_token_multiline_body.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x unexpected token
   ,-[2:3]
 1 | {{
 2 |   @
   :   ^
 3 | }}
   `----
