templater/tests/snapshots/error__debug_render_report__unrecognized_statement.snap
---
source: templater/tests/error.rs
expression: "format!(\"{report:?}\")"
---
  x unrecognized statement
   ,----
 1 | {% endif %}
   :    ^^^^^
   `----
